[gd_scene load_steps=8 format=3 uid="uid://jaijlswktv0r"]

[ext_resource type="Script" path="res://Scripts/Menù.gd" id="1_2sg0h"]
[ext_resource type="Texture2D" uid="uid://chx32g3ese1gj" path="res://Style/ModoPvP (1).png" id="2_jhm7v"]
[ext_resource type="Texture2D" uid="uid://dmrx6qa11l43s" path="res://Style/ModoPvP-on-press (1).png" id="3_dtxhe"]
[ext_resource type="Texture2D" uid="uid://bwtwhj8cptm3a" path="res://Style/Practica (1).png" id="4_r7am6"]
[ext_resource type="Texture2D" uid="uid://bo5ls5xvxfbil" path="res://Style/Practica-on-press (1).png" id="5_pkakp"]
[ext_resource type="Texture2D" uid="uid://d3ciwescx6t7w" path="res://Style/Salir (1).png" id="6_grwsw"]
[ext_resource type="Texture2D" uid="uid://dn34kyxx4emgl" path="res://Style/Salir-on-press (1).png" id="7_736c5"]

[node name="Menù" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2sg0h")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.723
anchor_right = 0.5
anchor_bottom = 0.723
offset_left = -177.0
offset_top = -166.504
offset_right = 178.0
offset_bottom = 166.496
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="Play" type="Button" parent="VBoxContainer"]
clip_contents = true
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Play"

[node name="TextureButton" type="TextureButton" parent="VBoxContainer/Play"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.994
anchor_bottom = 1.0
offset_left = -14.0
offset_top = -6.0
offset_right = 34.13
offset_bottom = 5.0
mouse_filter = 1
texture_normal = ExtResource("2_jhm7v")
texture_pressed = ExtResource("3_dtxhe")

[node name="Practice" type="Button" parent="VBoxContainer"]
clip_contents = true
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Practice"

[node name="TextureButton" type="TextureButton" parent="VBoxContainer/Practice"]
layout_mode = 0
offset_left = -22.0
offset_top = -4.0
offset_right = 394.0
offset_bottom = 57.0
mouse_filter = 1
texture_normal = ExtResource("4_r7am6")
texture_pressed = ExtResource("5_pkakp")

[node name="Options" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Options"

[node name="Credits" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Credits"

[node name="Quit" type="Button" parent="VBoxContainer"]
clip_contents = true
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Quit"

[node name="TextureButton" type="TextureButton" parent="VBoxContainer/Quit"]
layout_mode = 0
offset_left = -25.0
offset_top = -6.0
offset_right = 391.0
offset_bottom = 55.0
mouse_filter = 1
texture_normal = ExtResource("6_grwsw")
texture_pressed = ExtResource("7_736c5")

[node name="TextEdit" type="TextEdit" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.282
anchor_right = 0.5
anchor_bottom = 0.282
offset_left = -195.0
offset_top = -53.736
offset_right = 203.0
offset_bottom = 53.264
theme_override_font_sizes/font_size = 60
text = "Royal Clicker"
editable = false

[connection signal="pressed" from="VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBoxContainer/Play" to="." method="play_presionado"]
[connection signal="pressed" from="VBoxContainer/Practice" to="." method="_on_practice_pressed"]
[connection signal="pressed" from="VBoxContainer/Practice" to="." method="practice_presionado"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="options_presionado"]
[connection signal="pressed" from="VBoxContainer/Credits" to="." method="credits_presionado"]
[connection signal="pressed" from="VBoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="quit_pressionado"]
